# unifolm-world-model-action

./: .gitignore  .gitmodules  =0.0.30  LICENSE  README.md  README_cn.md  SPARK_SETUP.md  inspect_ckpt.py  pyproject.toml
configs/inference/: base_model_inference.yaml  world_model_decision_making.yaml  world_model_interaction.yaml
configs/train/: config.yaml  meta.json
examples/base_model_prompts/: prompts.csv
examples/world_model_interaction_prompts/: unitree_g1_pack_camera.csv  unitree_z1_dual_arm_cleanup_pencils.csv  unitree_z1_dual_arm_stackbox.csv  unitree_z1_dual_arm_stackbox_v2.csv  unitree_z1_stackbox.csv
prepare_data/: prepare_training_data.py
scripts/: prepare_lerobot_dataset.py  run_base_model_inference.sh  run_real_eval_server.sh  run_world_model_interaction.sh  train.sh  trainer.py
scripts/evaluation/: base_model_inference.py  eval_utils.py  real_eval_server.py  world_model_interaction.py
unitree_deploy/: README.md  pyproject.toml
unitree_deploy/docs/: GettingStarted.md  README_cn.md  add_robot_arm.md  add_robot_camera.md  add_robot_endeffector.md  build_robot.md
unitree_deploy/scripts/: brainco_bridge.py  robot_client.py
unitree_deploy/test/: test_replay.py
unitree_deploy/test/arm/g1/: test_g1_arm.py  test_g1_env.py
unitree_deploy/test/arm/z1/: test_z1_arm.py  test_z1_dual_arm.py  test_z1_env.py
unitree_deploy/test/camera/: test_image_client_camera.py  test_realsense_camera.py  test_usb_camera.py
unitree_deploy/test/endeffector/: test_dex1.py
unitree_deploy/unitree_deploy/: eval_dataset_env.py  real_unitree_env.py
unitree_deploy/unitree_deploy/robot/: robot.py  robot_configs.py  robot_utils.py
unitree_deploy/unitree_deploy/robot_devices/: robots_devices_utils.py
unitree_deploy/unitree_deploy/robot_devices/arm/: arm_indexs.py  configs.py  g1_arm.py  g1_arm_ik.py  utils.py  z1_arm.py  z1_arm_ik.py  z1_dual_arm.py
unitree_deploy/unitree_deploy/robot_devices/assets/g1/: g1_body29.xml
unitree_deploy/unitree_deploy/robot_devices/assets/z1/: z1.urdf
unitree_deploy/unitree_deploy/robot_devices/cameras/: configs.py  imageclient.py  intelrealsense.py  opencv.py  utils.py
unitree_deploy/unitree_deploy/robot_devices/endeffector/: brainco_hand.py  configs.py  gripper.py  utils.py
unitree_deploy/unitree_deploy/utils/: eval_utils.py  joint_trajcetory_inter.py  rerun_visualizer.py  rich_logger.py  run_simulation.py  trajectory_generator.py  weighted_moving_filter.py
(+49 files in other folders)
